--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,37 @@
  
   /*----------------------------------------------   section 1   --------------------------------------------------*/
 
+.big-box { max-width: 1170px;
+           width: 100%;
+           margin: 0 auto; }
+
+.box { display: flex;
+       justify-content: space-between; }
+
+.mini-box:nth-child(1) { width: 570px;
+                         height: 320px;
+                         background-color: blue; }
+
+.mini-box:nth-child(2) { width: 570px;
+                         height: 320px;
+                         background-color: yellow; }
+
+  /*----------------------------------------------   section 2   --------------------------------------------------*/
+
+
+.big-box1 { max-width: 1170px;
+            width: 100%;
+            margin: 0 auto; }
+
+.box1 { display: flex;
+        justify-content: space-between; }
+
+.mini-box1:nth-child(1) { max-width: 570px;
+                          width: 100%;
+                          height: 320px;
+                          background-color: green; }
+
+.mini-box1:nth-child(2) { max-width: 570px;
+                          width: 100%;
+                          height: 320px;
+                          background-color: red; }
